# qshellctl

./: .gitignore  README.md  pyproject.toml
cli/: main.py  shells.py
docs/: TECHNICAL_ROADMAP.md
models/: dep.py  exceptions.py  shell.py
shells/: __init__.py  caelestia.py  default.py  ii.py
utils/: bootstrap.py  checkers.py  deps.py  process.py  rich_helper.py  state.py
